add UserSecurity for add users with fixtures, hashing password with EntityListener Methods

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,10 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\EntityListener\:
+        resource: "../src/EntityListener/"
+        tags: ["doctrine.orm.entity_listener"]
+
     # add more service definitions when explicit configuration is needed
     App\Entity\Products:
         public: true
