--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,12 +32,15 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/utilisateur, roles: ROLE_USER }
+        - { path: ^/products, roles: ROLE_USER }
+        - { path: ^/collection, roles: ROLE_USER }
 
     # Configuration des rôles
     role_hierarchy:
-        ROLE_ADMIN: [ROLE_USER]
-        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_PRODUCT_ADMIN: [ROLE_USER]
+        ROLE_ADMIN: [ROLE_PRODUCT_ADMIN]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN]
         
 when@test:
     security:
