--- a/.env
+++ b/.env
@@ -36,5 +36,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
+MAILER_DSN=smtp://085516410b0941:6d0ac6353ef787@sandbox.smtp.mailtrap.io:2525
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
