add recatcha service by installing karser_recaptcha3:

--- a/.env
+++ b/.env
@@ -39,3 +39,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 MAILER_DSN=smtp://085516410b0941:6d0ac6353ef787@sandbox.smtp.mailtrap.io:2525
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> karser/karser-recaptcha3-bundle ###
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=6LeQfn4pAAAAAPieU_xbHCmxF1HfCALb2Oty1RQR
+RECAPTCHA3_SECRET=6LeQfn4pAAAAAF5E9ltQAPEul97V31c5dvySWkTS
+###< karser/karser-recaptcha3-bundle ###
