--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,6 +34,9 @@ services:
     App\Entity\Contact:
         public: true
 
+    App\Entity\Review:
+        public: true
+
     knp_paginator:
         class: Knp\Component\Pager\Paginator
     
