--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,22 +4,22 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-      images_directory: '%kernel.project_dir%/public/uploads/images'
+    images_directory: "%kernel.project_dir%/public/uploads/images"
 
 services:
     # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
+        autowire: true # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: "../src/"
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+            - "../src/DependencyInjection/"
+            - "../src/Entity/"
+            - "../src/Kernel.php"
 
     App\EntityListener\:
         resource: "../src/EntityListener/"
@@ -43,6 +43,6 @@ services:
 
     App\Controller\ProductsController:
         arguments:
-            $imageDir: '%images_directory%'
-    
+            $imageDir: "%images_directory%"
+
     # please note that last definitions always *replace* previous ones
