--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,19 +3,18 @@ vich_uploader:
     metadata:
         type: attribute
 
-        
     mappings:
         products_images:
             uri_prefix: /images/products
-            upload_destination: '%kernel.project_dir%/public/images/products'
+            upload_destination: "%kernel.project_dir%/public/images/products"
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
         colletion_images:
             uri_prefix: /images/colletion
-            upload_destination: '%kernel.project_dir%/public/images/colletion'
+            upload_destination: "%kernel.project_dir%/public/images/colletion"
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
         review_images:
             uri_prefix: /images/review
-            upload_destination: '%kernel.project_dir%/public/images/review'
+            upload_destination: "%kernel.project_dir%/public/images/review"
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
