--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -18,3 +18,8 @@ vich_uploader:
             uri_prefix: /images/review
             upload_destination: "%kernel.project_dir%/public/images/review"
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+        image_products_images:
+            uri_prefix: /images/review
+            upload_destination: "%kernel.project_dir%/public/images/image_products"
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
