--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -23,3 +23,8 @@ vich_uploader:
             uri_prefix: "%review_images%"
             upload_destination: "%kernel.project_dir%/public%review_images%"
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+        post_images:
+            uri_prefix: "%post_images%"
+            upload_destination: "%kernel.project_dir%/public%post_images%"
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
